# dabble

./: Building.md  CMakeLists.txt  README.md
example/: features_test.dabble  test.dabble
include/: analyzer.h  ast.h  interpreter.h  parser.h  utils.h
src/: analyzer.cpp  interpreter.cpp  main.cpp  parser.cpp  utils.cpp
tests/: test_array_lets.dabble  test_checks.dabble  test_complex_types.dabble  test_control_flow.dabble  test_exports.dabble  test_functions.dabble  test_injection.dabble  test_lets.dabble  test_logging.dabble  test_loops.dabble  test_normalise.dabble  test_projections.dabble  test_regressions.dabble  test_vals.dabble
vscode-dabble/: README.md  dabble.tmLanguage.json  language-configuration.json  package.json
vscode-dabble/syntaxes/: dabble.tmLanguage.json
